# pakgender

./: CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  convert_names.py  dictionary.py  pyproject.toml  train_model.py
pakgender/: __init__.py  _version.py  batch.py  dictionary.py  ml_model.py  predictor.py  preprocessor.py  rules.py
pakgender.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pakgender/data/: model.pkl  names.json
