[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pakgender"
version = "0.1.5"
description = "Gender inference for Pakistani names using a 3-layer pipeline: dictionary, rules, and ML."
readme = "README.md"
license = "MIT"
authors = [{ name = "Sahib Dino", email = "dino28575@gmail.com" }]
keywords = ["nlp", "pakistan", "urdu", "names", "gender", "ssarabic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
cli = ["click>=8.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
pakgender = "pakgender.cli:main"

[project.urls]
Homepage = "https://github.com/dino28575/pakgender"
Repository = "https://github.com/dino28575/pakgender"

[tool.setuptools.packages.find]
where = ["."]
include = ["pakgender*"]

[tool.setuptools.package-data]
pakgender = ["data/*.json", "data/*.pkl"]
